--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,22 @@
 body {
 	padding-top: 65px;
 } 
+
+.jumbotron {
+  width:150%;
+  height:650px;
+  background-image:url('../img/jumbotron.jpg');
+  background-size:cover;
+  margin-top:-2%;
+  margin-left: -25%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 47px; /* Set the fixed height of the footer here */
+  line-height: 47px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+  text-align: center;
+}
